Поправил названия методов в Инкодере, сделал сохранение неисользуемых хэшей батчем, сделал пакет для CleanerScheduler.