@@ -4,7 +4,6 @@ import faang.school.urlshortenerservice.entity.Hash;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class Base62Encoder {
@@ -13,13 +12,13 @@ public class Base62Encoder {
 
     private static final String CHARACTERS = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
 
-    public List<Hash> encode(List<Long> numbers) {
+    public List<Hash> encodeAll(List<Long> numbers) {
         return numbers.stream()
-                .map(this::toBase62)
-                .collect(Collectors.toList());
+                .map(this::encodeEach)
+                .toList();
     }
 
-    private Hash toBase62(Long number) {
+    private Hash encodeEach(Long number) {
         StringBuilder stringBuilder = new StringBuilder(1);
         do {
             stringBuilder.insert(0, CHARACTERS.charAt((int) (number % BASE62)));
